Summary: | ASTERISK-27465: CLI Completion Not Working | ||
Reporter: | Ross Beer (rossbeer) | Labels: | |
Date Opened: | 2017-12-07 10:10:00.000-0600 | Date Closed: | 2017-12-07 14:20:53.000-0600 |
Priority: | Major | Regression? | |
Status: | Closed/Complete | Components: | General |
Versions: | 13.19.0 15.2.0 | Frequency of Occurrence | Constant |
Related Issues: | |||
Environment: | Cent OS / Fedora | Attachments: | |
Description: | The CLI tab completion is no longer working on GIT version 13 and 15 when using a remote connection.
This was discussed on IRC and confirmed by Corey Farrel. | ||
Comments: | By: Asterisk Team (asteriskteam) 2017-12-07 10:10:01.197-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Corey Farrell (coreyfarrell) 2017-12-07 10:29:19.200-0600 Confirmed CLI completion does not work for {{asterisk -r}} in Asterisk latest GIT 13 and 15. {{asterisk -c}} is unaffected. By: Corey Farrell (coreyfarrell) 2017-12-07 10:42:55.703-0600 Fixes posted for review: https://gerrit.asterisk.org/7469 https://gerrit.asterisk.org/7470 By: Ross Beer (rossbeer) 2017-12-07 11:02:51.828-0600 I can confirm the patch fixes the issue for Asterisk 13 By: Friendly Automation (friendly-automation) 2017-12-07 14:20:53.990-0600 Change 7470 merged by Jenkins2: CLI: Fix remote console completion. [https://gerrit.asterisk.org/7470|https://gerrit.asterisk.org/7470] By: Friendly Automation (friendly-automation) 2017-12-07 14:37:41.022-0600 Change 7469 merged by Joshua Colp: CLI: Fix remote console completion. [https://gerrit.asterisk.org/7469|https://gerrit.asterisk.org/7469] |