main/asterisk.c
@@ -3133,10 +3133,17 @@ static char *cli_prompt(EditLine *editline)
 static struct ast_vector_string *ast_el_strtoarr(char *buf)
 {
 	char *retstr;
+	char *bestmatch;
 	struct ast_vector_string *vec = ast_calloc(1, sizeof(*vec));
 
 	if (!vec) {
 		return NULL;
+	}
+
+	/* bestmatch must not be deduplicated */
+	bestmatch = strsep(&buf, " ");
+	if (!bestmatch || !strcmp(bestmatch, AST_CLI_COMPLETE_EOF)) {
+		goto vector_cleanup;
 	}
 
 	while ((retstr = strsep(&buf, " "))) {
@@ -3145,7 +3152,7 @@ static struct ast_vector_string *ast_el_strtoarr(char *buf)
 		}
 
 		/* Older daemons sent duplicates. */
-		if (AST_VECTOR_GET_CMP(vec, retstr, strcasecmp)) {
+		if (AST_VECTOR_GET_CMP(vec, retstr, !strcasecmp)) {
 			continue;
 		}
 
@@ -3157,7 +3164,9 @@ static struct ast_vector_string *ast_el_strtoarr(char *buf)
 		}
 	}
 
-	if (!AST_VECTOR_SIZE(vec)) {
+	bestmatch = ast_strdup(bestmatch);
+	if (!bestmatch || AST_VECTOR_INSERT_AT(vec, 0, bestmatch)) {
+		ast_free(bestmatch);
 		goto vector_cleanup;
 	}
 
